; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/sort/extr_tuplestore.c_copytup_heap.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/sort/extr_tuplestore.c_copytup_heap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*)* @copytup_heap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @copytup_heap(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = ptrtoint i8* %6 to i32
  %8 = call i64 @minimal_tuple_from_heap_tuple(i32 %7)
  store i64 %8, i64* %5, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = load i64, i64* %5, align 8
  %11 = call i32 @GetMemoryChunkSpace(i64 %10)
  %12 = call i32 @USEMEM(i32* %9, i32 %11)
  %13 = load i64, i64* %5, align 8
  %14 = inttoptr i64 %13 to i8*
  ret i8* %14
}

declare dso_local i64 @minimal_tuple_from_heap_tuple(i32) #1

declare dso_local i32 @USEMEM(i32*, i32) #1

declare dso_local i32 @GetMemoryChunkSpace(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
